# Barbearia-Master

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: app.rs  auth_protection.rs  db.rs  error.rs  main.rs  models.rs
docs/: ARCHITECTURE.md  PASSWORD_RESET_SETUP.md  SECURITY.md
docs/superpowers/specs/: 2026-06-11-establishment-finance-closures-design.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: App.tsx  api-error.test.ts  api.ts  appointment-status.test.ts  appointment-status.ts  auth-account.test.ts  auth-account.ts  auth-permissions.test.ts  auth-permissions.ts  barber-validation.test.ts  barber-validation.ts  calendar-hours.test.ts  calendar-hours.ts  checkout-payments.test.ts  checkout-payments.ts  client-search.test.ts  client-search.ts  client-validation.test.ts  client-validation.ts  date-navigation.test.ts  date-navigation.ts  hcaptcha.ts  index.css  main.tsx  password-reset.test.ts  password-reset.ts  professional-portal.test.ts  professional-portal.ts  pwa-cache.test.ts  pwa-cache.ts  pwa-install.test.ts  pwa-install.ts  pwa-registration.test.ts  pwa-registration.ts  service-catalog.test.ts  service-catalog.ts
premium_barber_management/: DESIGN.md
