[package]
name = "stitch_barbershop_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
password-hash = { version = "0.5", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
